@startuml

class Dialog{
...
+ render()
+ createButton(): Button
}
note right: Button button :createProduct()\n button.render(), ... button.onCLick()
class WindowsDialog {
...
+ createButton(): Button
}
note bottom:<b>return new</b> WindowsButton
class WebDialog {
...
+ createButton(): Button
}

interface Button {
+ render()
+ onClick()
}
note top: declares atributes and methods common to all objects\n generated by Creator and subclasses
class WindowsDialog
class WebDialog

Dialog <|-- WindowsDialog
Dialog <|-- WebDialog

Button <-left- Dialog:uses\nto\ncreate
Button <|.. WindowsButton

Button <|.. HTMLButton
@enduml